--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Say Hello</title>
+    <title>Say Hello to my friends</title>
 </head>
 <body>
     <h1>Hello to All</h1>
